# stratocirrus

./: .gitignore  README.md  setup.cfg
stratus/: bootstrap.py  cli.py  command_framework.py  configuration.py  delegate.py  launcher.py  logger.py  package.py  repository.py  shell_commands.py  versions.py
stratus/info/: __init__.py
stratus/release/: __init__.py  cli.py  model.py
stratus/release/models/: development.py  gitflow.py  train.py
tests/unit/stratus/: test_command_framework.py
