[metadata]
name = stratus
version = 0.0.1
author = Dave Evans
author-email = evansde77@gmail.com
home-page = https://github.com/evansde77/stratus
description = Build, development and deployment helper for python applications
long-description = file: README.md
license = MIT
license-file = COPYING
platform = any
keywords = {keywords}
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.6
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6, != 3.0.*, != 3.1.*, != 3.2.*
packages = stratus
test_suite = tests
setup_requires =
    setuptools>38.3.0
	# setuptools >=30.3.0     # minimal version for `setup.cfg`
    # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
install_requires =
    docopt
tests_require =
    tox
    mock
    pytest

[options.entry_points]
console_scripts =
    stratus-build = stratus.build.cli:main
    stratus-release = stratus.release.cli:main
    stratus-package = stratus.packages.cli:main
    stratus = stratus.launcher:main

stratus_release_models =
    gitflow=stratus.release.models.gitflow:Gitflow
    train=stratus.release.models.train:Train
    development=stratus.release.models.development:Development

stratus_package_templates =
    minimal=stratus.packages.templates.minimal:Minimal

[options.extras_require]
dev =
	docutils
	Pygments
test =
	green
	coverage
ci =
    # codacy-coverage
    # codecov

[bdist_wheel]
universal = true

[check]
metadata = true
restructuredtext = true
strict = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    # @abc.abstractmethod
    # @abc.abstractproperty
    # raise NotImplementedError
    # return NotImplemented
    # except ImportError

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions

[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/


